𝐜𝐫𝐞𝐚𝐭𝐞 𝐛𝐲 𝐝𝐚𝐫𝐤 𝐩𝐫𝐢𝐧𝐜𝐞

--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,6 +1,6 @@
 FROM quay.io/hermit/hermit-ser:latest
 
-WORKDIR /hermit-bot
+WORKDIR /Quenn-Ziyav
 COPY package*.json ./
 RUN npm install
 COPY . .
