--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "PIDUSAGE_SILENT=true pm2 start . --attach --name hermit-md"
   },
-  "author": "A-d-i-t-h-y-a-n",
+  "author": "tfadarkprince",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/baileys": "https://github.com/A-d-i-t-h-y-a-n/Baileys.js",
