--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hermit-md",
+  "name": "Hermit-v4",
   "version": "4.4.5",
-  "description": "Hermit-md - Simple whatsapp Multi Device bot based on @adiwajshing/baileys.",
+  "description": "Hermit-v4 - Simple whatsapp Multi Device bot based on @adiwajshing/baileys.",
   "main": "index.js",
   "scripts": {
-    "start": "PIDUSAGE_SILENT=true pm2 start . --attach --name hermit-md"
+    "start": "PIDUSAGE_SILENT=true pm2 start . --attach --name Hermit-v4"
   },
   "author": "tfadarkprince",
   "license": "ISC",
